contact info interactive email & phone

--- a/css/main.css
+++ b/css/main.css
@@ -2596,4 +2596,8 @@ footer .copyright span:last-child::after {
 	background: #000000;
 }
 
+.grey-link {
+	color: #6e6e6e;
+}
+
 /*# sourceMappingURL=main.css.map */
